--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
       <li>
         <a href= "/characters">Characters</a>
       </li>
+            <li>
+        <a href= "/bookmarks">Bookmark</a>
+      </li>
 
      <% if session.fetch(:user_id) == nil %> 
       <li>
@@ -44,6 +47,8 @@
       </li>
       <% end %> 
     </ul>
+    <p style = "color:green"> <%= notice %> </p>
+<p style = "color:red"> <%= alert %> </p>
     <%= yield %>
   </body>
 </html>
