--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -11,10 +11,11 @@
         </a>
       </div>
 
-      <div>
-        <a href="/delete_bookmark/<%= @the_bookmark.id %>">
+     <div>
+        <a href="/delete_bookmark/<%= @the_bookmark.user_id %>">
           Delete bookmark
         </a>
+      </div>
       </div>
     </div>
 
