--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,7 +3,7 @@
     <h1>
       Movie #<%= @the_movie.id %> details
     </h1>
-    
+  <% if @current_user != nil %>  
 <% current_user_bookmarks = Bookmark.where({:movie_id => @the_movie.id,:user_id =>session.fetch(:user_id)}) %>
 <% the_bookmark = current_user_bookmarks.at(0) %>
 
@@ -17,7 +17,7 @@
     <% else %>
     <a href= "/delete_bookmark/<%=the_bookmark.id%>">Un-bookmark</a>
     <% end %>
-    
+    <% end %>
     <div>
       <div>
         <a href="/movies">
